style.css
body {
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    margin: 0;
    padding: 0;
    min-height: 100vh;
    display: flex;
    text-align: center;
    color: #483C32;
}

h1 {
    text-align: center;
    justify-content: center;
}
.container {
    display: flex;
    flex-direction: column;
}

.logo {
    margin-right: auto;
    width: 84px;
    height: 84px;
    padding: 5px;
}

.links a {
    text-decoration: none;
    padding: 15px;
    color: #FEFBEA;
    margin-right: 10px;
}

.links {
    margin-left: auto;
    display: flex;
    padding: 20px 0px 20px 100px;
}

.header, .footer {
    display: flex;
    background-color: #8ABD91;
    
}
/* Area right beneath the header/navbar */
.whole {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
    background-color: #B0808C;
    padding: 40px;
    margin: 0px;
}
.half {
    display: flex;
    align-items: center;
    justify-content: center;
    color: #483C32;
    padding: 30px;
    flex-basis: 300px;
    height: 150px;
}
/* Split the two halves of this area to ensure individuality */
.one {
    background-color: #FEFBEA;
    flex-direction: column;
    border-top-left-radius: 15px;
    border-bottom-left-radius: 15px;
}

.two {
    background-color: lightgrey;
    border-top-right-radius: 15px;
    border-bottom-right-radius: 15px;
}

.button {
    display: block;
    text-align: center;
    width: 90px;
    border: none;
    background: #8ABD91;
    padding: 10px;
    border-radius: 10px;
    color: #fff;
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    text-decoration: none;
    font-weight: bold;
}

/* Now we approach the collection of "cards" */

.deck {
    display: flex;
    align-items: center;
    justify-content: space-evenly;
    flex-direction: row;
    color: darkslateblue;
    background-color: #FEFBEA;
}

#deckname {
    display: block;
    align-items: center;
    justify-content: center;
    background-color:#FEFBEA;
    padding: 5px;
    margin-bottom: 0px;
    margin-top: 0px;
}

.card {
    display: flex;
    padding: 30px;
    margin: 15px;
    flex-direction: column;
    flex-wrap: wrap;
}

.cardpic {
    border: solid 2px #8ABD91;
    border-radius: 20px;
}

.cardpic img {
    width: 160px;
    height: 150px;
    object-fit: cover;
    border-radius: 20px;
    margin: 1px;
}

.cardinfo {

}

.ribbon {
    display: flex;
    padding-top: 15px;
    padding-bottom: 15px;
    background-color: lightgrey;
    align-items: center;
    justify-content: center;
}

.lastband {
    display: flex;
    padding: 15px;
    background-color: #FEFBEA;
    align-items: center;
    justify-content: center;
}

.more {
    display: flex;
    align-items: center;
    justify-content: center;
    color: #483C32;
    padding: 30px;
    flex-basis: 300px;
    display: flex;
    align-items: center;
    border-color: none;
    height: 60px;
}

.news {
    background-color: #8ABD91;
    flex-direction: column;
    border-top-left-radius: 15px;
    border-bottom-left-radius: 15px;
    margin-left: 200px;
    margin-top: 50px;
    margin-bottom: 50px;
}

.socials {
    background-color: #8ABD91;
    border-top-right-radius: 15px;
    border-bottom-right-radius: 15px;
    margin-right: 200px;
    margin-top: 50px;
    margin-bottom: 50px;
}

.socials-button {
    background:#B0808C;
    color: #483C32;
    display: block;
    text-align: center;
    width: 90px;
    border: none;
    padding: 10px;
    border-radius: 10px;
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    text-decoration: none;
    font-weight: bold;
}

.footer {
    flex-direction: row-reverse;
}

.footer p {
    opacity: 0.6;
    padding: 0px;
    margin: 0px;
}

